--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <p>Веб-администратор, 2014-2016</p>
   <ul>
     <li>Работа с SEO и контекстной рекламой</li>
-    <li>Разработка информационных систем/li>
+    <li>Разработка информационных систем</li>
     <li>Написание и поддержка сайта на CMS</li>
   </ul>
   <br>
