--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/Footer-with-social-icons.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/fa-regular.min.css">
     <!-- Fonts Open Sans -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
@@ -168,7 +169,9 @@
                       <div class="col-md-4 myCols socials">
                           <h5>Я в социальных сетях!</h5>
                           <div class="social-networks">
-                              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                            <a class="btn btn-social-icon btn-twitter">
+                               <span class="fa fa-twitter"></span>
+                            </a>
                               <a href="#" class="facebook"><i class="fa fa-facebook-official"></i></a>
                               <a href="#" class="vkontakte"><i class="fa fa-vk"></i></a>
                           </div>
