--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
           <section id="mid">
             <div class="container-fluid">
               <h2 class="align-middle">Мои работы</h2>
+              <hr class="star-light">
 
               <div class="row">
-            <div class="middle col-sm-4 align-middle">
-              <a class="rounded mx-auto d-block" href="#"><img src="img/Site4.png" alt=""></a>
+            <div class="middle col-12 col-lg-4 align-middle">
+              <a class="rounded mx-auto d-block" href="#"><img class="img-fluid" src="img/Site4.png" alt=""></a>
             </div>
-            <div class="middle col-sm-4 align-middle">
-              <a class="rounded mx-auto d-block" href="#"><img src="img/Site4.png" alt=""></a>
+            <div class="middle col-12 col-lg-4 align-middle">
+              <a class="rounded mx-auto d-block" href="#"><img class="img-fluid" src="img/Site4.png" alt=""></a>
             </div>
-            <div class="middle col-sm-4 align-middle">
-              <a class="rounded mx-auto d-block" href="#"><img src="img/Site4.png" alt=""></a>
+            <div class="middle col-12 col-lg-4 align-middle">
+              <a class="rounded mx-auto d-block" href="#"><img class="img-fluid" src="img/Site4.png" alt=""></a>
             </div>
           </div>
         </div>
@@ -108,20 +109,20 @@
       <hr class="star-light">
     <div class="row">
 
-     <div class="middle col-sm-4 align-middle">
+     <div class="middle col-12 col-lg-4 align-middle">
        <h2 class="aligne-middle">HTML-Верстальщик</h2>
-       <a class="rounded mx-auto d-block" href="#"><img src="img/design.svg" alt=""></a>
-        <span class="text-content">HTML5/CSS3 верстка, кроссбраузерная верстка, адаптивная верстка, SASS, Bootstrap, Photoshop, Linux, начальный уровень JavaScript, опыт работы с Meteor(Angular/MongoDB)</span>
+       <a class="rounded mx-auto d-block" href="#"><img class="img-fluid" src="img/design.svg" alt=""></a>
+        <p class="text-content">HTML5/CSS3 верстка, кроссбраузерная верстка, адаптивная верстка, SASS, Bootstrap, Photoshop, Linux, начальный уровень JavaScript, опыт работы с Meteor(Angular/MongoDB)</p>
      </div>
-     <div class="middle col-sm-4 align-middle">
+     <div class="middle col-12 col-lg-4 align-middle">
        <h2 class="aligne-middle">Веб-разработчик</h2>
-       <a class="rounded mx-auto d-block" href="#"><img src="img/frontend.svg" alt=""></a>
-        <span class="text-content">Опыт разработки интернет-магазинов на CMS платформах, наполнение сайтов контентом, составление семантического ядра и работа с SEO-Оптимизацией.</span>
+       <a class="rounded mx-auto d-block" href="#"><img class="img-fluid" src="img/frontend.svg" alt=""></a>
+        <p class="text-content">Опыт разработки интернет-магазинов на CMS платформах, наполнение сайтов контентом, составление семантического ядра и работа с SEO-Оптимизацией.</p>
      </div>
-     <div class="middle col-sm-4 align-middle">
+     <div class="middle col-12 col-lg-4 align-middle">
        <h2 class="aligne-middle">Проектировщик</h2>
-       <a class="rounded mx-auto d-block" href="#"><img src="img/backend.svg" alt=""></a>
-        <span class="text-content">Проектирование бизнес-моделей при помощи нотаций IDEF0, построение CASE-Диаграмм, Работа с БД (Postgres, Mysql), Ramus, Modelio, MySql Workbench.</span>
+       <a class="img-fluid rounded mx-auto d-block" href="#"><img class="img-fluid" src="img/backend.svg" alt=""></a>
+        <p class="text-content">Проектирование бизнес-моделей при помощи нотаций IDEF0, построение CASE-Диаграмм, Работа с БД (Postgres, Mysql), Ramus, Modelio, MySql Workbench.</p>
      </div>
     </div>
   </div>
@@ -162,11 +163,11 @@
           <footer id="myFooter">
               <div class="container-fluid">
                   <div class="row">
-                      <div class="col-md-4 myCols">
+                      <div class="col-12 col-md-4 myCols">
                           <h5>Обо мне</h5>
                           <p class="About">Здравствуйте! Меня зовут Орест, мне 23 года. Я вот только закончил университет РЭУ им.Плеханова по специальности прикладная информатика, люблю играть на укулеле, видеомонтажировать и моя мечта - стать успешным фроент-енд разработчиком!</p>
                       </div>
-                      <div class="col-md-4 myCols socials">
+                      <div class="col-12 col-md-4 myCols socials">
                           <h5>Я в социальных сетях!</h5>
                           <div class="social-networks">
                             <a class="btn btn-social-icon btn-twitter">
@@ -177,7 +178,7 @@
                           </div>
 
                       </div>
-                      <div class="col-md-4 myCols">
+                      <div class="col-12 col-md-4 myCols">
                           <h5>Адрес</h5>
                         <p>
                           Российская федерация, г.Москва, метров ВДНХ
