--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" >
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/Footer-with-social-icons.css">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/fa-regular.min.css">
     <!-- Fonts Open Sans -->
@@ -194,4 +193,6 @@
   <script  type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/validator.min.js"></script>
   <script type="text/javascript" src="js/form-scripts.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
 </html>
