--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <form role="form" id="contactForm" data-toggle="validator" class="shake">
       <div class="row">
             <div class="form-group col-sm-12">
-                <label for="name" class="h4">Имя</label>
+                <label for="name" class="h4">Name</label>
                 <input type="text" class="form-control" id="name" placeholder="Введите имя" required>
               <div class="help-block with-errors"></div>
             </div>
@@ -148,7 +148,7 @@
             </div>
 
         <div class="form-group col-sm-12">
-       <label for="message" class="h4 ">Сообщение</label>
+       <label for="message" class="h4 ">Message</label>
             <textarea id="message" class="form-control" rows="5" placeholder="Введите сообщение" required></textarea>
         </div>
         </div>
