--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/Footer-with-social-icons.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/fa-regular.min.css">
+    <link rel="stylesheet" href="css/fontawesome-all.min.css">
     <!-- Fonts Open Sans -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
