--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               </div>
       </footer>
   </body>
-  <script  type="text/javascript" src="js/jquery.min.js"></script>
+  <script  type="text/javascript" src="js/jquery-1.11.2.min"></script>
   <script type="text/javascript" src="js/validator.min.js"></script>
   <script type="text/javascript" src="js/form-scripts.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
